# modalWare

./: .gitignore  Notes.txt  README.md  compile_library.bat  license.txt  modalWare.cpp  modalWare.sln  modalWare.vcxproj  modalWare.vcxproj.filters  start.bat
Communication/: discordAPI.cpp  discordAPI.h
Communication/discord_bot/: .gitignore  Cargo.toml  build.bat  build.rs  discord_bot.h
Communication/discord_bot/src/: lib.rs  main.rs
Communication/discord_bot/test/: run_test.bat  test.cpp
ConfigManager/: Config.cpp  Config.h
Example/: conf  module_conf.txt
ModulConfig/: Config.cpp  Config.h
Scripts/: SignExecutable.ps1  compile_library.bat
Test/: Test.cpp  Test.def  Test.h
UnitTest/: UnitTest.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters
src/: CommandAndControll.cpp  CommandsAndControll.h  FunctionPointer.cpp  FunctionPointer.h  ModuleLoading.cpp  ModuleLoading.h  SelfDestruct.vbs  Types.h  Util.cpp  Util.h
