[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[features]
cdylib = [] 

[build-dependencies]
dotenv = "0.15"

[dependencies]
once_cell = "1.10"
serenity = { version = "0.10", features = ["client", "model", "gateway", "http", "utils", "rustls_backend"], default-features = false}
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }

[dependencies.windows]
version = "0.*"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]
